--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"eslint": ">=6.0.0",
 		"rollup": "^2",
 		"sourcemap-codec": "1.4.8",
-		"svelte": "^3.2.0",
+		"svelte": "3.34.0",
 		"typescript": "^4.0.0"
 	}
 }
